--- a/index.html
+++ b/index.html
@@ -8,20 +8,53 @@
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
   
+  <!-- Bootswatch United Theme -->
+  <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/united/bootstrap.min.css" rel="stylesheet" integrity="sha384-0UBL8wxZ28kqJ8w8N8RUV0odBG5w8D/Y+rb+o7hr2F3dS9twlAE8S7VUtVSRe5cc" crossorigin="anonymous">
+
   <!-- Optional theme -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
   
   <!-- Latest compiled and minified JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+  
   <link rel="stylesheet" href="./style.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
 </head>
+
 <body>
-  <div id="regions_div"></div>
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <h1 id="pageTitle">What Country Am I?</h1>
+      </div>
+    </div>
+    <div class="row" id="playerInfoDiv">
+      <div class="col-md-6 playerInfo">
+        <h2 id="playerName">Player Name</h2>
+      </div>
+      <div class="col-md-6 playerInfo">
+        <h2 id="playerScore">Player Score</h2>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12" id="imageContainer">
+        <div id="regions_div"></div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <form id="playerGuess">
+          <input type="text" id="playerGuessText" value="What country is this?" >
+        </form>
+      </div>
+    </div>
+  </div>
+
   
 
   <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
   <script type="text/javascript" src="https://www.google.com/jsapi"></script>
   <script src="script.js"></script>       
+
 </body>
 </html>
