countryCodeList transforms to arrayOfCountryCodes - region codes NOT changed yet

--- a/index.html
+++ b/index.html
@@ -3,7 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <title>What Country Am I?</title>
+
+  <!-- JQuery -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+
+  <!-- Lodash -->
+  <script src="https://cdn.jsdelivr.net/lodash/4.6.1/lodash.min.js"></script>
   
   <!-- Latest compiled and minified CSS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
@@ -17,8 +22,9 @@
   <!-- Latest compiled and minified JavaScript -->
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
   
+  <!-- My CSS Stylesheet -->
   <link rel="stylesheet" href="./style.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.0/jquery.min.js"></script>
+
 </head>
 
 <body>
@@ -37,6 +43,9 @@
       </div>
     </div>
     <div class="row">
+      <div class="col-md-12" id="buttonContainer">
+        <button type="button" class="btn btn-primary" id="startButton">Start Game</button>
+      </div>
       <div class="col-md-12" id="imageContainer">
         <div id="regions_div"></div>
       </div>
