--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="row">
       <div class="col-md-12">
         <form id="playerGuess">
-          <input type="text" id="playerGuessText" value="What country is this?" >
+          <input type="text" id="playerGuessText">
         </form>
       </div>
     </div>
