score is tracked, and correct/incorrect messages display after each guess

--- a/index.html
+++ b/index.html
@@ -43,8 +43,9 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-md-12" id="buttonContainer">
+      <div class="col-md-12" id="bannerContainer">
         <button type="button" class="btn btn-primary" id="startButton">Start Game</button>
+        <h1 id="banner"></h1>
       </div>
       <div class="col-md-12" id="imageContainer">
         <div id="regions_div"></div>
@@ -53,7 +54,7 @@
     <div class="row">
       <div class="col-md-12">
         <form id="playerGuess">
-          <input type="text" id="playerGuessText">
+          <input type="text" id="playerGuessText" autocomplete="off" placeholder="What country is this?">
         </form>
       </div>
     </div>
