--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <h2 id="timer">Time Remaining:<br><span id="time"></span></h2>
       </div>
       <div class="col-md-4 bg-info" id="bannerContainer">
-        <button type="button" class="btn btn-lg btn-primary" id="startButton">Start Game</button>
+        <button type="button" class="btn btn-lg btn-success" id="startButton">Start Game</button>
         <h2 id="banner"></h2>
       </div>
       <div class="col-md-4 bg-warning" id="scoreContainer">
