timer now ends game, results displayed

--- a/index.html
+++ b/index.html
@@ -56,6 +56,13 @@
     <div class="row">
       <div class="col-md-12" id="imageContainer">
         <div id="regions_div"></div>
+        <div class="hidden" id="resultsInfo">
+          <h1>RESULTS<br><br>
+            You identified <span id="displayCorrect"></span> 
+            countries <br> out of a possible <span id="displayTotal"></span><br>
+            (<span id="displayPct"></span>)
+          </h1>
+        </div>
       </div>
     </div>
   </div>
