--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </div>
     <div class="row">
       <div class="col-md-12">
-        <form id="playerGuess">
+        <form id="playerGuessForm">
           <input type="text" id="playerGuessText" autocomplete="off" placeholder="What country is this?">
         </form>
       </div>
