--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
 
   
 
+  <script src="countryCodesObj.js"></script>
   <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
   <script type="text/javascript" src="https://www.google.com/jsapi"></script>
   <script src="script.js"></script>       
