Correct arrays sort for levels 1-4

--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
         <h2 id="timer">Time Remaining:<br><span id="time"></span></h2>
       </div>
       <div class="col-md-4 bg-info" id="bannerContainer">
-        <button type="button" class="btn btn-lg btn-success" id="startButton">Start Game</button>
+        <button type="button" class="btn btn-success startBtn" id="lvl1Btn">Easy</button>
+        <button type="button" class="btn btn-warning startBtn" id="lvl2Btn">Hard</button>
+        <button type="button" class="btn btn-info startBtn" id="lvl3Btn">Really Hard</button>
+        <button type="button" class="btn btn-danger startBtn" id="lvl4Btn">Literally Insane</button>
         <h2 id="banner"></h2>
       </div>
       <div class="col-md-4 bg-warning" id="scoreContainer">
