replay ability confirmed - guess input form hidden before start game

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     </div>
     <div class="row">
       <div class="col-md-12">
-        <form id="playerGuessForm">
+        <form id="playerGuessForm" class="hidden">
           <input type="text" id="playerGuessText" autocomplete="off" placeholder="What country is this?">
         </form>
       </div>
